Bugfix https://bugs.launchpad.net/ubuntu/+source/systemd/+bug/1872015

--- a/cloud_init.ubuntu.yaml
+++ b/cloud_init.ubuntu.yaml
@@ -234,3 +234,6 @@ runcmd:
   - /opt/livekit/update_ip.sh
   - systemctl enable livekit-docker
   - systemctl start livekit-docker
+  - unlink /etc/resolv.conf
+  - ln -s /run/systemd/resolve/resolv.conf /etc/resolv.conf
+  - reboot
