--- a/livekit.yaml
+++ b/livekit.yaml
@@ -5,7 +5,7 @@ rtc:
     tcp_port: 7881
     port_range_start: 50000
     port_range_end: 60000
-    use_external_ip: true
+    use_external_ip: false
     enable_loopback_candidate: false
 redis:
     address: localhost:6379
