--- a/cloud_init.ubuntu.yaml
+++ b/cloud_init.ubuntu.yaml
@@ -22,7 +22,7 @@ write_files:
           tcp_port: 7881
           port_range_start: 50000
           port_range_end: 60000
-          use_external_ip: true
+          use_external_ip: false
           enable_loopback_candidate: false
       redis:
           address: localhost:6379
@@ -132,7 +132,7 @@ write_files:
             - ./caddy_data:/data
             - ./acme-dns-cred.json:/etc/acme-dns-cred.json
         livekit:
-          image: livekit/livekit-server:latest
+          image: livekit/livekit-server:v1.4
           command: --config /etc/livekit.yaml
           restart: unless-stopped
           network_mode: "host"
@@ -146,7 +146,7 @@ write_files:
           volumes:
             - ./redis.conf:/etc/redis.conf
         ingress:
-          image: livekit/ingress:latest
+          image: livekit/ingress:v1.1
           restart: unless-stopped
           environment:
             - INGRESS_CONFIG_FILE=/etc/ingress.yaml
@@ -210,9 +210,13 @@ write_files:
       development: false
       rtc_config:
           udp_port: 7885
-          use_external_ip: true
+          use_external_ip: false
           enable_loopback_candidate: false
-      
+      cpu_cost:
+          rtmp_cpu_cost: 2.0
+          whip_cpu_cost: 2.0
+          whip_bypass_transcoding_cpu_cost: 0.1
+          url_cpu_cost: 2
 
   - path: /opt/livekit/acme-dns-cred.json
     content: |
